@@ -1,5 +1,10 @@
 2004-12-05  Tor Lillqvist  <tml@iki.fi>
 
+	* glib/glib.symbols
+	* glib/gwin32.[hc]: Implement DLL ABI stability also for
+	g_win32_get_package_installation_directory()) and
+	g_win32_get_package_installation_subdirectory().
+
 	* glib/Makefile.am (install-libtool-import-lib): Remove the DLL
 	binary compatibilty entries from the import library. They aren't
 	used by newly compiled code, so no need to have them in the import
