@@ -909,8 +909,10 @@ g_vsprintf
 #ifdef G_OS_WIN32
 g_win32_error_message
 g_win32_ftruncate
-g_win32_get_package_installation_directory
-g_win32_get_package_installation_subdirectory
+g_win32_get_package_installation_directory PRIVATE
+g_win32_get_package_installation_directory_utf8
+g_win32_get_package_installation_subdirectory PRIVATE
+g_win32_get_package_installation_subdirectory_utf8
 g_win32_get_windows_version
 g_win32_getlocale
 #endif
